[b][color=orange]v5.69[/color], 22.03.2023[/b][list]
[*]Chat: Fix a non Retail Chat error.. narf[/list]